--- a/packages/wrangler/package.json
+++ b/packages/wrangler/package.json
@@ -11,6 +11,7 @@
   "bugs": {
     "url": "https://github.com/cloudflare/wrangler/issues"
   },
+  "prettier": {},
   "homepage": "https://github.com/cloudflare/wrangler#readme",
   "keywords": [
     "wrangler",
